--- a/OnlineStore.Domain.Interfaces/OnlineStore.Domain.Interfaces.csproj
+++ b/OnlineStore.Domain.Interfaces/OnlineStore.Domain.Interfaces.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IRepository.cs" />
+    <Compile Include="IUnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
