[added] Identity (roles), Purchasing repository

--- a/OnlineStore.Infrastructure.Data/OnlineStore.Infrastructure.Data.csproj
+++ b/OnlineStore.Infrastructure.Data/OnlineStore.Infrastructure.Data.csproj
@@ -68,6 +68,8 @@
     <Compile Include="Repositories\Production\ProductPhotoRepository.cs" />
     <Compile Include="Repositories\Production\ProductProductPhotoRepository.cs" />
     <Compile Include="Repositories\Production\ProductRepository.cs" />
+    <Compile Include="Repositories\Purchasing\PurchaseOrderDetailRepository.cs" />
+    <Compile Include="Repositories\Purchasing\PurchaseOrderHeaderRepository.cs" />
     <Compile Include="Repositories\Sales\CustomerRepository.cs" />
     <Compile Include="Repositories\Sales\SalesOrderDetailRepository.cs" />
     <Compile Include="Repositories\Sales\SalesOrderHeaderRepository.cs" />
