--- a/OnlineStore/OnlineStore.csproj
+++ b/OnlineStore/OnlineStore.csproj
@@ -190,6 +190,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\ProductsController.cs" />
+    <Compile Include="Controllers\SalesPersonController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -198,6 +199,7 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\ViewModels\CartIndexViewModel.cs" />
+    <Compile Include="Models\ViewModels\OrderHeaderViewModel.cs" />
     <Compile Include="Models\ViewModels\PageInfo.cs" />
     <Compile Include="Models\ViewModels\PhotoViewModel.cs" />
     <Compile Include="Models\ViewModels\ProductsViewModel.cs" />
@@ -209,7 +211,9 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="Util\OrderProcessorModule.cs" />
     <Compile Include="Util\ProductModule.cs" />
+    <Compile Include="Util\SalesPersonModule.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-grid.css" />
@@ -218,6 +222,7 @@
     <Content Include="Content\bootstrap-reboot.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\errorstyles.css" />
     <Content Include="Content\img\header_background.png" />
     <Content Include="Content\img\icons\allergic.svg" />
     <Content Include="Content\img\icons\arrow_down.svg" />
@@ -396,6 +401,8 @@
     <Content Include="Views\Shared\ClientRequestPartial.cshtml" />
     <Content Include="Views\Cart\Index.cshtml" />
     <Content Include="Views\Cart\Checkout.cshtml" />
+    <Content Include="Views\Cart\Completed.cshtml" />
+    <Content Include="Views\SalesPerson\Index.cshtml" />
     <None Include="Views\Shared\DeliveryPartial.cshtml" />
     <Content Include="Views\Shared\HeaderPartial.cshtml" />
   </ItemGroup>
