--- a/OnlineStore.Domain.Core/OnlineStore.Domain.Core.csproj
+++ b/OnlineStore.Domain.Core/OnlineStore.Domain.Core.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\AspNetCustomer.cs" />
     <Compile Include="Entities\AspNetRole.cs" />
     <Compile Include="Entities\AspNetUser.cs" />
     <Compile Include="Entities\AspNetUserClaim.cs" />
