--- a/OnlineStore.Infrastructure.Data/OnlineStore.Infrastructure.Data.csproj
+++ b/OnlineStore.Infrastructure.Data/OnlineStore.Infrastructure.Data.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="Context\ItmContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\AspNet\AspNetCustomerRepository.cs" />
     <Compile Include="Repositories\Main\Repository.cs" />
     <Compile Include="Repositories\Person\AddressRepository.cs" />
     <Compile Include="Repositories\Person\BusinessEntityAddressRepository.cs" />
