[added] WCF Backend

--- a/OnlineStore/Web.config
+++ b/OnlineStore/Web.config
@@ -73,6 +73,14 @@
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Ninject" publicKeyToken="c7192dc5380945e7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.3.3.0" newVersion="3.3.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Ninject.Web.Common" publicKeyToken="c7192dc5380945e7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.3.0.0" newVersion="3.3.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
@@ -87,4 +95,34 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_IProductSVC" receiveTimeout="00:25:00"
+          sendTimeout="00:25:00" maxBufferSize="2147483647" maxReceivedMessageSize="2147483647">
+          <readerQuotas maxStringContentLength="2147483647" maxArrayLength="2147483647" />
+        </binding>
+        <binding name="BasicHttpBinding_IOrderProcessorSVC" />
+        <binding name="BasicHttpBinding_ISalesPersonSVC" />
+      </basicHttpBinding>
+      <wsHttpBinding>
+        <binding name="BasicHttpBinding_ICartSVC" />
+      </wsHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:62335/Services/ProductSVC.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProductSVC"
+        contract="ProductServiceReference.IProductSVC" name="BasicHttpBinding_IProductSVC" />
+      <endpoint address="http://localhost:62335/Services/CartSVC.svc"
+        binding="wsHttpBinding" bindingConfiguration="BasicHttpBinding_ICartSVC"
+        contract="CartStoreServiceReference.ICartSVC" name="BasicHttpBinding_ICartSVC" />
+      <endpoint address="http://localhost:62335/Services/OrderProcessorSVC.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IOrderProcessorSVC"
+        contract="OrderProcessorServiceReference.IOrderProcessorSVC"
+        name="BasicHttpBinding_IOrderProcessorSVC" />
+      <endpoint address="http://localhost:62335/Services/SalesPersonSVC.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISalesPersonSVC"
+        contract="SalesPersonServiceReference.ISalesPersonSVC" name="BasicHttpBinding_ISalesPersonSVC" />
+    </client>
+  </system.serviceModel>
 </configuration>
