--- a/OnlineStore/OnlineStore.csproj
+++ b/OnlineStore/OnlineStore.csproj
@@ -66,6 +66,8 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -185,6 +187,26 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Binders\CartModelBinder.cs" />
+    <Compile Include="Connected Services\CartStoreServiceReference\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
+    <Compile Include="Connected Services\OrderProcessorServiceReference\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
+    <Compile Include="Connected Services\ProductServiceReference\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
+    <Compile Include="Connected Services\SalesPersonServiceReference\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CartController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -216,6 +238,54 @@
     <Compile Include="Util\SalesPersonModule.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Connected Services\CartStoreServiceReference\CartSVC.wsdl" />
+    <None Include="Connected Services\CartStoreServiceReference\CartSVC.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\CartStoreServiceReference\CartSVC1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\CartStoreServiceReference\CartSVC2.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\OrderProcessorServiceReference\OrderProcessorSVC.wsdl" />
+    <None Include="Connected Services\OrderProcessorServiceReference\OrderProcessorSVC.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\OrderProcessorServiceReference\OrderProcessorSVC1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\OrderProcessorServiceReference\OrderProcessorSVC2.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\ProductServiceReference\ProductSVC.disco" />
+    <None Include="Connected Services\ProductServiceReference\configuration91.svcinfo" />
+    <None Include="Connected Services\ProductServiceReference\configuration.svcinfo" />
+    <None Include="Connected Services\ProductServiceReference\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+    <None Include="Connected Services\CartStoreServiceReference\CartSVC.disco" />
+    <None Include="Connected Services\CartStoreServiceReference\configuration91.svcinfo" />
+    <None Include="Connected Services\CartStoreServiceReference\configuration.svcinfo" />
+    <None Include="Connected Services\CartStoreServiceReference\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+    <None Include="Connected Services\OrderProcessorServiceReference\OrderProcessorSVC.disco" />
+    <None Include="Connected Services\OrderProcessorServiceReference\configuration91.svcinfo" />
+    <None Include="Connected Services\OrderProcessorServiceReference\configuration.svcinfo" />
+    <None Include="Connected Services\OrderProcessorServiceReference\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+    <None Include="Connected Services\SalesPersonServiceReference\SalesPersonSVC.disco" />
+    <None Include="Connected Services\SalesPersonServiceReference\configuration91.svcinfo" />
+    <None Include="Connected Services\SalesPersonServiceReference\configuration.svcinfo" />
+    <None Include="Connected Services\SalesPersonServiceReference\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
     <Content Include="Content\bootstrap-reboot.css" />
@@ -268,6 +338,30 @@
     <Content Include="Content\bootstrap-reboot.css.map" />
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
+    <None Include="Connected Services\ProductServiceReference\ProductSVC.wsdl" />
+    <None Include="Connected Services\ProductServiceReference\ProductSVC.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\ProductServiceReference\ProductSVC1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\ProductServiceReference\ProductSVC2.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <Content Include="Properties\DataSources\OnlineStore.Infrastructure.Business.DTO.PhotoDTO.datasource" />
+    <Content Include="Properties\DataSources\OnlineStore.Infrastructure.Business.DTO.ProductDTO.datasource" />
+    <Content Include="Properties\DataSources\OnlineStore.Infrastructure.Business.DTO.CartLineDTO.datasource" />
+    <None Include="Connected Services\SalesPersonServiceReference\SalesPersonSVC.wsdl" />
+    <None Include="Connected Services\SalesPersonServiceReference\SalesPersonSVC.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\SalesPersonServiceReference\SalesPersonSVC1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\SalesPersonServiceReference\SalesPersonSVC2.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <Content Include="Properties\DataSources\OnlineStore.Infrastructure.Business.DTO.OrderHeaderDTO.datasource" />
     <None Include="Scripts\jquery-3.6.0.intellisense.js" />
     <Content Include="Scripts\jquery-3.6.0.js" />
     <Content Include="Scripts\jquery-3.6.0.min.js" />
@@ -433,6 +527,15 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Connected Services\CartStoreServiceReference\" />
+    <WCFMetadataStorage Include="Connected Services\OrderProcessorServiceReference\" />
+    <WCFMetadataStorage Include="Connected Services\ProductServiceReference\" />
+    <WCFMetadataStorage Include="Connected Services\SalesPersonServiceReference\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
