--- a/OnlineStore.Infrastructure.Business/OnlineStore.Infrastructure.Business.csproj
+++ b/OnlineStore.Infrastructure.Business/OnlineStore.Infrastructure.Business.csproj
@@ -39,6 +39,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Messaging" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -50,16 +51,19 @@
     <Compile Include="DTO\CartLineDTO.cs" />
     <Compile Include="DTO\OrderHeaderDTO.cs" />
     <Compile Include="DTO\PhotoDTO.cs" />
+    <Compile Include="DTO\ProdQtySubstractDTO.cs" />
     <Compile Include="DTO\ProductDTO.cs" />
     <Compile Include="DTO\ShippingDetailsDTO.cs" />
     <Compile Include="Infrastructure\ServiceModule.cs" />
     <Compile Include="Infrastructure\ValidationException.cs" />
     <Compile Include="Interfaces\ICartService.cs" />
+    <Compile Include="Interfaces\IMSMQService.cs" />
     <Compile Include="Interfaces\IOrderProcessorService.cs" />
     <Compile Include="Interfaces\IProductService.cs" />
     <Compile Include="Interfaces\ISalesPersonService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CartService.cs" />
+    <Compile Include="Services\MSMQService.cs" />
     <Compile Include="Services\OrderProcessorService.cs" />
     <Compile Include="Services\ProductService.cs" />
     <Compile Include="Services\SalesPersonService.cs" />
