--- a/OnlineStore/OnlineStore.csproj
+++ b/OnlineStore/OnlineStore.csproj
@@ -221,11 +221,13 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\ViewModels\CartIndexViewModel.cs" />
+    <Compile Include="Models\ViewModels\CustomerViewModel.cs" />
     <Compile Include="Models\ViewModels\OrderHeaderViewModel.cs" />
     <Compile Include="Models\ViewModels\PageInfo.cs" />
     <Compile Include="Models\ViewModels\PhotoViewModel.cs" />
     <Compile Include="Models\ViewModels\ProductsViewModel.cs" />
     <Compile Include="Models\ViewModels\ProductViewModel.cs" />
+    <Compile Include="Models\ViewModels\SalesProductViewModel.cs" />
     <Compile Include="Models\ViewModels\ShippingDetailsViewModel.cs" />
     <Compile Include="ProductWebService.asmx.cs">
       <DependentUpon>ProductWebService.asmx</DependentUpon>
@@ -282,17 +284,17 @@
     <None Include="Connected Services\ProductServiceReference\ProductSVC2.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Connected Services\SalesPersonServiceReference\SalesPersonSVC.disco" />
-    <None Include="Connected Services\SalesPersonServiceReference\configuration91.svcinfo" />
-    <None Include="Connected Services\SalesPersonServiceReference\configuration.svcinfo" />
-    <None Include="Connected Services\SalesPersonServiceReference\Reference.svcmap">
-      <Generator>WCF Proxy Generator</Generator>
-      <LastGenOutput>Reference.cs</LastGenOutput>
-    </None>
     <None Include="Connected Services\ProductServiceReference\ProductSVC.disco" />
     <None Include="Connected Services\ProductServiceReference\configuration91.svcinfo" />
     <None Include="Connected Services\ProductServiceReference\configuration.svcinfo" />
     <None Include="Connected Services\ProductServiceReference\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+    <None Include="Connected Services\SalesPersonServiceReference\SalesPersonSVC.disco" />
+    <None Include="Connected Services\SalesPersonServiceReference\configuration91.svcinfo" />
+    <None Include="Connected Services\SalesPersonServiceReference\configuration.svcinfo" />
+    <None Include="Connected Services\SalesPersonServiceReference\Reference.svcmap">
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
@@ -349,6 +351,10 @@
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
     <Content Include="Properties\DataSources\OnlineStore.Infrastructure.Business.DTO.CartLineDTO.datasource" />
+    <Content Include="Properties\DataSources\OnlineStore.Infrastructure.Business.DTO.OrderHeaderDTO.datasource" />
+    <Content Include="Properties\DataSources\OnlineStore.Infrastructure.Business.DTO.PhotoDTO.datasource" />
+    <Content Include="Properties\DataSources\OnlineStore.Infrastructure.Business.DTO.ProductDTO.datasource" />
+    <Content Include="Properties\DataSources\OnlineStore.Infrastructure.Business.DTO.SalesProductDTO.datasource" />
     <None Include="Connected Services\SalesPersonServiceReference\SalesPersonSVC.wsdl" />
     <None Include="Connected Services\SalesPersonServiceReference\SalesPersonSVC.xsd">
       <SubType>Designer</SubType>
@@ -359,9 +365,6 @@
     <None Include="Connected Services\SalesPersonServiceReference\SalesPersonSVC2.xsd">
       <SubType>Designer</SubType>
     </None>
-    <Content Include="Properties\DataSources\OnlineStore.Infrastructure.Business.DTO.OrderHeaderDTO.datasource" />
-    <Content Include="Properties\DataSources\OnlineStore.Infrastructure.Business.DTO.PhotoDTO.datasource" />
-    <Content Include="Properties\DataSources\OnlineStore.Infrastructure.Business.DTO.ProductDTO.datasource" />
     <None Include="Scripts\jquery-3.6.0.intellisense.js" />
     <Content Include="Scripts\jquery-3.6.0.js" />
     <Content Include="Scripts\jquery-3.6.0.min.js" />
@@ -499,6 +502,8 @@
     <Content Include="Views\SalesPerson\Index.cshtml" />
     <Content Include="Views\Products\Category.cshtml" />
     <Content Include="Views\Products\SearchProduct.cshtml" />
+    <Content Include="Views\SalesPerson\OrderDetails.cshtml" />
+    <Content Include="Views\SalesPerson\AllOrderHeaders.cshtml" />
     <None Include="Views\Shared\_DeliveryPartial.cshtml" />
     <Content Include="Views\Shared\_HeaderPartial.cshtml" />
   </ItemGroup>
