--- a/OnlineStore/Web.config
+++ b/OnlineStore/Web.config
@@ -98,12 +98,13 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="BasicHttpBinding_IOrderProcessorSVC" />
         <binding name="BasicHttpBinding_IProductSVC" receiveTimeout="00:25:00"
           sendTimeout="00:25:00" maxBufferSize="2147483647" maxReceivedMessageSize="2147483647">
           <readerQuotas maxStringContentLength="2147483647" maxArrayLength="2147483647" />
         </binding>
         <binding name="BasicHttpBinding_ISalesPersonSVC" />
+        <binding name="BasicHttpBinding_IAccountSVC" />
+        <binding name="BasicHttpBinding_IOrderProcessorSVC" />
       </basicHttpBinding>
       <wsHttpBinding>
         <binding name="BasicHttpBinding_ICartSVC" />
@@ -113,16 +114,19 @@
       <endpoint address="http://localhost:62335/Services/CartSVC.svc"
         binding="wsHttpBinding" bindingConfiguration="BasicHttpBinding_ICartSVC"
         contract="CartStoreServiceReference.ICartSVC" name="BasicHttpBinding_ICartSVC" />
-      <endpoint address="http://localhost:62335/Services/OrderProcessorSVC.svc"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IOrderProcessorSVC"
-        contract="OrderProcessorServiceReference.IOrderProcessorSVC"
-        name="BasicHttpBinding_IOrderProcessorSVC" />
       <endpoint address="http://localhost:62335/Services/ProductSVC.svc"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProductSVC"
         contract="ProductServiceReference.IProductSVC" name="BasicHttpBinding_IProductSVC" />
       <endpoint address="http://localhost:62335/Services/SalesPersonSVC.svc"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISalesPersonSVC"
         contract="SalesPersonServiceReference.ISalesPersonSVC" name="BasicHttpBinding_ISalesPersonSVC" />
+      <endpoint address="http://localhost:62335/Services/AccountSVC.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IAccountSVC"
+        contract="AccountServiceReference.IAccountSVC" name="BasicHttpBinding_IAccountSVC" />
+      <endpoint address="http://localhost:62335/Services/OrderProcessorSVC.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IOrderProcessorSVC"
+        contract="OrderProcessorServiceReference.IOrderProcessorSVC"
+        name="BasicHttpBinding_IOrderProcessorSVC" />
     </client>
   </system.serviceModel>
 </configuration>
