--- a/OnlineStore/OnlineStore.csproj
+++ b/OnlineStore/OnlineStore.csproj
@@ -187,6 +187,11 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Binders\CartModelBinder.cs" />
+    <Compile Include="Connected Services\AccountServiceReference\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="Connected Services\CartStoreServiceReference\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -224,10 +229,12 @@
     <Compile Include="Models\ViewModels\CustomerViewModel.cs" />
     <Compile Include="Models\ViewModels\OrderHeaderViewModel.cs" />
     <Compile Include="Models\ViewModels\PageInfo.cs" />
+    <Compile Include="Models\ViewModels\PersonViewModel.cs" />
     <Compile Include="Models\ViewModels\PhotoViewModel.cs" />
     <Compile Include="Models\ViewModels\ProductsViewModel.cs" />
     <Compile Include="Models\ViewModels\ProductViewModel.cs" />
     <Compile Include="Models\ViewModels\SalesProductViewModel.cs" />
+    <Compile Include="Models\ViewModels\ShippingDetailsAuthenticatedViewModel.cs" />
     <Compile Include="Models\ViewModels\ShippingDetailsViewModel.cs" />
     <Compile Include="ProductWebService.asmx.cs">
       <DependentUpon>ProductWebService.asmx</DependentUpon>
@@ -235,11 +242,22 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="Util\AccountModule.cs" />
     <Compile Include="Util\OrderProcessorModule.cs" />
     <Compile Include="Util\ProductModule.cs" />
     <Compile Include="Util\SalesPersonModule.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Connected Services\AccountServiceReference\AccountSVC.wsdl" />
+    <None Include="Connected Services\AccountServiceReference\AccountSVC.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\AccountServiceReference\AccountSVC1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\AccountServiceReference\AccountSVC2.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Connected Services\CartStoreServiceReference\CartSVC.wsdl" />
     <None Include="Connected Services\CartStoreServiceReference\CartSVC.xsd">
       <SubType>Designer</SubType>
@@ -250,6 +268,13 @@
     <None Include="Connected Services\CartStoreServiceReference\CartSVC2.xsd">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Connected Services\CartStoreServiceReference\CartSVC.disco" />
+    <None Include="Connected Services\CartStoreServiceReference\configuration91.svcinfo" />
+    <None Include="Connected Services\CartStoreServiceReference\configuration.svcinfo" />
+    <None Include="Connected Services\CartStoreServiceReference\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
     <None Include="Connected Services\OrderProcessorServiceReference\OrderProcessorSVC.wsdl" />
     <None Include="Connected Services\OrderProcessorServiceReference\OrderProcessorSVC.xsd">
       <SubType>Designer</SubType>
@@ -259,20 +284,6 @@
     </None>
     <None Include="Connected Services\OrderProcessorServiceReference\OrderProcessorSVC2.xsd">
       <SubType>Designer</SubType>
-    </None>
-    <None Include="Connected Services\CartStoreServiceReference\CartSVC.disco" />
-    <None Include="Connected Services\CartStoreServiceReference\configuration91.svcinfo" />
-    <None Include="Connected Services\CartStoreServiceReference\configuration.svcinfo" />
-    <None Include="Connected Services\CartStoreServiceReference\Reference.svcmap">
-      <Generator>WCF Proxy Generator</Generator>
-      <LastGenOutput>Reference.cs</LastGenOutput>
-    </None>
-    <None Include="Connected Services\OrderProcessorServiceReference\OrderProcessorSVC.disco" />
-    <None Include="Connected Services\OrderProcessorServiceReference\configuration91.svcinfo" />
-    <None Include="Connected Services\OrderProcessorServiceReference\configuration.svcinfo" />
-    <None Include="Connected Services\OrderProcessorServiceReference\Reference.svcmap">
-      <Generator>WCF Proxy Generator</Generator>
-      <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
     <None Include="Connected Services\ProductServiceReference\ProductSVC.wsdl" />
     <None Include="Connected Services\ProductServiceReference\ProductSVC.xsd">
@@ -295,6 +306,20 @@
     <None Include="Connected Services\SalesPersonServiceReference\configuration91.svcinfo" />
     <None Include="Connected Services\SalesPersonServiceReference\configuration.svcinfo" />
     <None Include="Connected Services\SalesPersonServiceReference\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+    <None Include="Connected Services\AccountServiceReference\AccountSVC.disco" />
+    <None Include="Connected Services\AccountServiceReference\configuration91.svcinfo" />
+    <None Include="Connected Services\AccountServiceReference\configuration.svcinfo" />
+    <None Include="Connected Services\AccountServiceReference\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+    <None Include="Connected Services\OrderProcessorServiceReference\OrderProcessorSVC.disco" />
+    <None Include="Connected Services\OrderProcessorServiceReference\configuration91.svcinfo" />
+    <None Include="Connected Services\OrderProcessorServiceReference\configuration.svcinfo" />
+    <None Include="Connected Services\OrderProcessorServiceReference\Reference.svcmap">
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
@@ -504,6 +529,7 @@
     <Content Include="Views\Products\SearchProduct.cshtml" />
     <Content Include="Views\SalesPerson\OrderDetails.cshtml" />
     <Content Include="Views\SalesPerson\AllOrderHeaders.cshtml" />
+    <Content Include="Views\Cart\CheckoutAuthenticated.cshtml" />
     <None Include="Views\Shared\_DeliveryPartial.cshtml" />
     <Content Include="Views\Shared\_HeaderPartial.cshtml" />
   </ItemGroup>
@@ -539,6 +565,7 @@
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <ItemGroup>
+    <WCFMetadataStorage Include="Connected Services\AccountServiceReference\" />
     <WCFMetadataStorage Include="Connected Services\CartStoreServiceReference\" />
     <WCFMetadataStorage Include="Connected Services\OrderProcessorServiceReference\" />
     <WCFMetadataStorage Include="Connected Services\ProductServiceReference\" />
