--- a/WCFBackend/Web.config
+++ b/WCFBackend/Web.config
@@ -17,12 +17,8 @@
   <system.serviceModel>
 
     <services>
-      <service name="WCFBackend.CartSVC" >
-        <endpoint
-            address=""
-            binding="wsHttpBinding"
-            bindingConfiguration="Binding1"
-            contract="WCFBackend.ICartSVC" />
+      <service name="WCFBackend.CartSVC">
+        <endpoint address="" binding="wsHttpBinding" bindingConfiguration="Binding1" contract="WCFBackend.ICartSVC" />
       </service>
 
       <service name="WCFBackend.OrderProcessorSVC" behaviorConfiguration="debug" />
@@ -46,9 +42,8 @@
 
     <bindings>
       <basicHttpBinding>
-        <binding name="BasicHttpsBindingConfig" maxReceivedMessageSize="2147483647" maxBufferSize="2147483647"
-         receiveTimeout="00:25:00" sendTimeout="00:25:00">
-          <readerQuotas maxArrayLength="2147483647" maxStringContentLength="2147483647"/>
+        <binding name="BasicHttpsBindingConfig" maxReceivedMessageSize="2147483647" maxBufferSize="2147483647" receiveTimeout="00:25:00" sendTimeout="00:25:00">
+          <readerQuotas maxArrayLength="2147483647" maxStringContentLength="2147483647" />
         </binding>
       </basicHttpBinding>
       <wsHttpBinding>
