--- a/OnlineStore.Infrastructure.Business/packages.config
+++ b/OnlineStore.Infrastructure.Business/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="10.1.1" targetFramework="net472" />
+  <package id="MailKit" version="2.12.0" targetFramework="net472" />
+  <package id="MimeKit" version="2.12.0" targetFramework="net472" />
   <package id="Ninject" version="3.3.3" targetFramework="net472" />
+  <package id="Portable.BouncyCastle" version="1.8.10" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
 </packages>
